# 3d_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Debug/src/: cmake_install.cmake
Debug/src/engine/: cmake_install.cmake
Debug/src/engine/camera/: cmake_install.cmake
Debug/src/engine/context/: cmake_install.cmake
Debug/src/utils/: cmake_install.cmake
examples/triangle/: CMakeLists.txt
examples/triangle/include/: triangle.hpp
examples/triangle/src/: triangle.cpp
include/engine/: engine.hpp
include/engine/context/: context.hpp
include/engine/utils/: utils.hpp
include/engine/utils/init_structs/: init_structs.hpp
include/engine/utils/result/: result.hpp
include/engine/wrappers/allocated_image/: allocated_image.hpp
include/engine/wrappers/pipeline/: pipeline.hpp
include/engine/wrappers/pipeline_layout/: pipeline_layout.hpp
include/engine/wrappers/shader_module/: shader_module.hpp
shaders/: CMakeLists.txt
shaders/triangle/: CMakeLists.txt  triangle.frag  triangle.vert
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/engine/camera/: CMakeLists.txt  camera.hpp
src/engine/context/: CMakeLists.txt  context.cpp  context.hpp
src/engine/renderer/: CMakeLists.txt  renderer.cpp
src/engine/utils/: CMakeLists.txt  utils.cpp
src/engine/utils/init_structs/: init_structs.cpp
src/engine/wrappers/: CMakeLists.txt
src/engine/wrappers/allocated_image/: CMakeLists.txt  allocated_image.cpp
src/engine/wrappers/pipeline/: CMakeLists.txt  pipeline.cpp
src/engine/wrappers/pipeline_layout/: pipeline_layout.cpp
src/engine/wrappers/shader_module/: CMakeLists.txt  shader_module.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
src/utils/init_structs/: init.cpp  init.hpp
src/wrapper/: CMakeLists.txt
src/wrapper/pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.hpp
src/wrapper/pipeline_builder/: pipeline_builder.cpp  pipeline_builder.hpp
